Fixed issue which meant pressing tab would be picked up after  save and removed the status message. Only change state to changed now when numbers or ,. are entered. Changed callback method from ajax from done to success. Done wasn't getting called. Mid way through restyling section header so titles are baseline aligned.

--- a/src/AppBundle/Resources/assets/scss/digideps/_section-title.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_section-title.scss
@@ -1,15 +1,17 @@
 .page-section-title-container {
-
+    
     @extend %contain-floats;
     min-height: 4.5em;
+    display: table;
+    width: 100%;
     
     h1 {
         @include bold-36();
-        float: left;
     }
 
     .info {
-        float: right;
+        display: table-cell;
+        vertical-align: baseline;
     }
     
 }
